# homework-22-django

./: .env.example  README.md  catalog_fixture.json  groups.json  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: article_confirm_delete.html  article_detail.html  article_form.html  article_list.html  base.html
blog/templates/blog/includes/: inc_navbar.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: add_test_products.py
catalog/migrations/: 0001_initial.py  0002_alter_product_created_at_alter_product_updated_at.py  0003_alter_product_created_at_alter_product_updated_at.py  0004_alter_product_options_product_is_published.py  0005_alter_product_is_published.py  0006_product_owner.py
catalog/templates/: base.html  contacts.html  home.html  product_details.html
catalog/templates/catalog/: base.html  category_list.html  contacts.html  home.html  product_by_cat_list.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templates/catalog/includes/: inc_navbar.html
catalog/templates/includes/: inc_footer.html  inc_navbar.html
config/: settings.py  urls.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: create_moder_group.py  csu.py
users/migrations/: 0001_initial.py  0002_alter_user_avatar.py
users/templates/: login.html  register.html
