[tool.poetry]
name = "pythonproject4"
version = "0.1.0"
description = ""
authors = ["Anna <azeleranskaya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.4"
python-dotenv = "^1.1.1"
psycopg2-binary = "^2.9.10"
pillow = "^11.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
